Remove middleman